conf/envoy/service-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address: 
        address: 0.0.0.0
        port_value: 8003
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        # typed_config:
        #   "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    outlier_detection:
        consecutive_5xx: 2
        interval: "1s"
        base_ejection_time: "10s"
        max_ejection_percent: 100
        # consecutive_gateway_failure: 1
        # enforcing_consecutive_gateway_failure: 100
        # enforcing_consecutive_gateway_failure
         
        # success_rate_minimum_hosts: "1"
        # success_rate_request_volume: "5"
        # success_rate_stdev_factor: "1000" # divided by 1000 to get a double

    common_lb_config:
        healthy_panic_threshold: 
            value: 10

    # health_checks: 
    # - timeout: 5s
    #   interval: 1s
    #   no_traffic_interval: 5s
    #   interval_jitter: 1s
    #   unhealthy_threshold: 1
    #   healthy_threshold: 100
    #   event_log_path: /dev/stdout
    #   http_health_check:
    #     host: "172.17.0.1"
    #     path: "/outcall/health"
    #     service_name: "hc"
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            health_check_config:
              port_value: 8088
            address:
              socket_address:
                address: 172.17.0.1
                port_value: 8088
        - endpoint:
            health_check_config:
              port_value: 8086
            address:
              socket_address:
                address: 172.17.0.1
                port_value: 8086
        - endpoint:
            health_check_config:
              port_value: 8087
            address:
              socket_address:
                address: 172.17.0.1
                port_value: 8087
admin:
  access_log_path: "/data/log/envoy"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
